feat(auth): implementar autenticação JWT com cookie HttpOnly
Adiciona login/logout/me, filtro JWT em rotas protegidas, revogação por jti no logout e remove dependência firebase-admin.